second testing of fix for form not centered in mobile

--- a/css/search_box.css
+++ b/css/search_box.css
@@ -106,6 +106,6 @@ input[type="text"] {
 }
 @media (max-width: 700px) {
   .search_container {
-    padding: 30px;
+    padding: 0;
   }
 }
